# ccs-planner-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
app/: __init__.py  config.py  main.py  schemas.py
app/data/: brand_kpis.json  (+6 more)
deploy/: README_GCP.md  bootstrap.sh  firewall.sh  gcp-env.example  provision.sh  update.sh
docs/: PRD.md  PRD_v2.md  PRD_v3.md  PRD_v4.md  PRD_v5.md  PRD_v6.md  README.md  TDD.md  TDD_v2.md  TDD_v3.md  TDD_v4.md
scripts/: fork_demo.sh  smoke_test.sh  validate_with_survey.py
tests/: _v6_helpers.py  conftest.py  test_actuals_crud.py  test_actuals_report.py  test_actuals_ui_shell.py  test_admin_bootstrap.py  test_admin_ui.py  test_admin_users_endpoint.py  test_agent_automatic.py  test_agent_manual.py  test_api_http.py  test_auth_guard.py  test_calibration_admin_scope.py  test_calibration_channel_summary.py  test_calibration_confidence.py  test_calibration_coverage_banner.py  test_calibration_decay.py  test_calibration_observations.py  test_calibration_settings_noop_guard.py  test_calibration_settings_panel.py  test_channel_overrides.py  test_chart_capture_runtime_invariants.py  test_compare_endpoint.py  test_compare_single_plan_ux.py  test_compare_ui.py  test_conversations.py  test_cors_guard.py  test_duplication_matrix.py  test_fork_handoff.py  test_frequency_distribution.py  test_frontend_escape.py  test_frontend_shell.py  test_health.py  test_input_limits.py  test_manual_plan_render_safety.py  test_migration_from_prev6.py  test_mode_intro.py  test_no_dev_copy_in_sidebar.py  (+20 more)
(+14 files in other folders)
